plugins {
    id 'java'
    id 'application'
}

repositories {
    mavenCentral() 
}


java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed", "standard_out", "standard_error"
        showStandardStreams = true
    }
}

application {
    mainClass = 'EnoBufsTest'
}

